<resources>
    <string name="app_name">SE_project</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_search">Search</string>
    <string name="nav_healthy_diet">Healthy Diet</string>
    <string name="nav_exercise">Exercise</string>
    <string name="nav_notification">Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_pm25">PM2.4</string>
    <string name="nav_psi">PSI</string>
    <string name="nav_gym">Gym</string>
    <string name="nav_healthier_cateriers">Healthier Cateriers</string>
    <string name="nav_pm25_1">PM2.5</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_notification">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_one_pharmacy">OnePharmacy</string>
    <string name="title_activity_one_medicine">OneMedicine</string>
    <string name="title_activity_select_food">SelectFood</string>
    <string name="dialog_title">Beverages</string>
    <string name="ok_label">Ok</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="Dialog_title">Diary Product</string>
    <string name="cereal_title">Cereal</string>
    <string name="nav_healthier_caterers" />
    <string name="nav_healthier_caterers2">Healther Caterers</string>
    <string name="heamthier_c">Healthier Caterers</string>
</resources>
