<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_black_24dp1"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/exercise"
        android:icon="@drawable/baseline_directions_run_black_24dp"
        android:title="@string/nav_exercise" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_black_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/healthy_diet"
        android:icon="@drawable/baseline_restaurant_menu_black_24dp"
        android:title="@string/nav_healthy_diet" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/baseline_notifications_black_24dp"
        android:title="@string/nav_notification" />
</menu>